# sphase-cmake

./: .gitmodules  CMakeLists.txt  README.md
configuration/: CMakeLists.txt
configuration/include/sphase/: configuration.h  global.h  jsonparser.h  particle2.h  particles.h  vector2.h
configuration/src/: configuration.cpp  configurationparser.cpp  jsonparser.cpp  particles.cpp
data/: PollutantTransport.json  TankFilling.json  dambreak.json  freefall.json
data/expansion/: case0.json  case1g.json  case2g.json  case3.json  case3g.json
data/gpu/: adami_couette.json  adami_poiseuille.json  adami_poiseuille_005.json  adami_poiseuille_005__new.json  adami_poiseuille_010.json  adami_poiseuille_problem.json  adami_poiseuille_small.json  adm.json  colagrossi.json  couette.json  hyrdostatic_tank.json  lobovsky.json  performance_dambreak_0001.json  performance_dambreak_0002.json  performance_dambreak_0003.json  performance_dambreak_0005.json  performance_dambreak_0006.json  performance_dambreak_0008.json  performance_dambreak_001.json  performance_dambreak_0015.json  performance_dambreak_002.json  performance_lobovsky.json  periodic_boundary_dambreak.json  poiseuille.json  poiseuille0001.json  poiseuille00025.json  poiseuille_water.json  spheric_test_10.json  spheric_test_3.json  spheric_test_3_noperiodic.json  spheric_test_5.json  validation_dambreak_001.json  validation_hyrdostatic_tank.json  validation_hyrdostatic_tank_test.json
data/multiphase/: dambreak_Apra.json
data/poiseuille/: poiseuille0175.json  poiseuille035.json  poiseuille_adami.json  poiseuille_adami_working.json  poiseuille_dualsphysics.json  poiseuille_ga.json  poiseuille_meister_7.7.json  poiseuille_oneline.json
data/wwt/: 2CSTRs_ASIMvalidation.json  ASM_local_DenitBatchR_1stirrer.json  ASM_local_DenitBatchR_1stirrer_highres.json  ASM_local_DenitBatchR_1stirrer_mres.json  ASM_local_DenitBatchR_2stirrer.json  cell_validation.json  circuit_tworeactors.json  circuit_tworeactors_highres.json  circuit_tworeactors_highres_Q1400.json  circuit_tworeactors_highres_Q700.json  circuit_tworeactors_highres_Q700_air.json  circuit_tworeactors_highres_Q700_test.json  circuit_tworeactors_highres_vin10.json  circuit_tworeactors_highres_vin5.json  integrated_circuit.json
dependencies/cmake/: cub.cmake  h5part.cmake  hdf5.cmake  tclap.cmake
dependencies/patches/h5part/: CMakeLists.txt
